--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,15 +1,14 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/jwt_security
-    username:
+    url: jdbc:h2:mem:jwt_security
+    username: sa
     password:
-    driver-class-name: org.postgresql.Driver
+    driverClassName: org.h2.Driver
   jpa:
-    hibernate:
-      ddl-auto: create-drop
-    show-sql: true
-    properties:
-      hibernate:
-        format_sql: true
-    database: postgresql
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
+    spring.jpa.database-platform: org.hibernate.dialect.H2Dialect
+  h2:
+    console:
+      enabled: true #http://localhost:8080/h2-console
+#      path: /h2-console
+#      settings.trace: false
+#      settings.web-allow-others: false
